adding background to main div

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h1 class="heading_main">prime number checker</h1>
 
     <!--bolow this this div with display and buttons-->
-    <section>
+    <section class="parent">
       <h3 class="heading-div">
         number must be between <span class="limit"> 0 to 1000</span>
       </h3>
