created the base for the design

--- a/index.html
+++ b/index.html
@@ -15,5 +15,24 @@
   <body>
     <!-- main heading of file-->
     <h1 class="heading_main">prime number checker</h1>
+
+    <!--section containing all the element to check prime number.-->
+    <section class="parent_container">
+      <h3 class="message warning">
+        number must be
+        <span class="message_text"> 0 & 1000 </span>
+      </h3>
+
+      <!--display container has input display-->
+      <div class="display_container">
+        <input type="number" class="display" />
+      </div>
+
+      <!--this button to check for prime number-->
+      <button class="btn submit">check</button>
+
+      <!--this button to reset the page-->
+      <button class="btn reset">reset</button>
+    </section>
   </body>
 </html>
