--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
       <!--display container has input display-->
       <div class="display_container">
-        <input type="number" class="display" />
+        <input type="number" class="display" placeholder="enter number" />
       </div>
 
       <!--this button to check for prime number-->
