completed css for styling of the page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <section class="parent_container">
       <h3 class="message warning">
         number must be
-        <span class="message_text"> 0 & 1000 </span>
+        <span class="message_text"> between 0 & 1000 </span>
       </h3>
 
       <!--display container has input display-->
