added javascript file link in index.html

--- a/index.html
+++ b/index.html
@@ -34,5 +34,6 @@
       <!--this button to reset the page-->
       <button class="btn reset">reset</button>
     </section>
+    <script src="main.js"></script>
   </body>
 </html>
