added animation to button

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <!--section containing all the element to check prime number.-->
     <section class="parent_container">
-      <h3 class="message warning">
+      <h3 class="message">
         number must be
         <span class="message_text"> between 0 & 1000 </span>
       </h3>
@@ -29,10 +29,10 @@
       </div>
 
       <!--this button to check for prime number-->
-      <button class="btn submit">check</button>
+      <button type="submit" class="btn btn_animation submit">check</button>
 
       <!--this button to reset the page-->
-      <button class="btn reset">reset</button>
+      <button type="reset" class="btn btn_animation reset">reset</button>
     </section>
     <script src="main.js"></script>
   </body>
